[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reqhound"
version = "0.1.1"
description = "Track what your Python script really imports at runtime"
requires-python = ">=3.10"
dependencies = ["typer"]

[project.scripts]
reqhound = "reqhound.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["reqhound"]
